Add pause button in popup.html

--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,7 @@
 	<div class="actions">
 		<a href="#options" class="options" title="Open the options window">Options</a>
 		<a href="#toggle-enabled" id="saved" class="enabled" title="Disable Procrastinator">Disable Procrastinator</a>
+		<a href="#pause" id="pause" class="enabled" title="Pause Procrastinator temporarily">Pause for x</a>
 	</div>
 	<fieldset class="well well-small">
 		<legend>Quick Add</legend>
