Uncomment Timecode input for popup

--- a/popup.html
+++ b/popup.html
@@ -23,10 +23,10 @@
 		<div class="control-group">
 			<div class="controls"><input type="text" id="pattern" /></div>
 		</div>
-		<!--<div class="row-item timecode">
+		<div class="row-item timecode">
 			<label for="" class="row-label">Timecode</label>
 			<div class="input-area"><input type="text" id="timecode" placeholder="0900-1200,1300-1730" /></div>
-		</div>-->
+		</div>
 		<button id="quickadd" class="btn btn-primary btn-block">Quick Add</button>
 	</fieldset>
 	<span class="cr">v.<a class="version" href="#"></a></span>
